--- a/APP/docker-compose.yml
+++ b/APP/docker-compose.yml
@@ -5,22 +5,21 @@ services:
       - "3000:3000"
     env_file: .env
     environment:
-      - DB_HOST: db
-      - DB_PORT: 3306
+      - DB_HOST=db
+      - DB_PORT=3306
     depends_on:
       - db
   db:
-  image: mariadb:11
-  environment:
-    MARIADB_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
-    MARIADB_DATABASE=${DB_NAME}
-    MARIADB_USER=${DB_USER}
-    MARIADB_PASSWORD=${DB_PASSWORD}
-  Volumes:
-    - db_data:/var/lib/mysql
-  ports:
-    - "3306:3306"
-  volumes:
-    db_data:
+    image: mariadb:11
+    environment:
+      MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MARIADB_DATABASE: ${DB_NAME}
+      MARIADB_USER: ${DB_USER}
+      MARIADB_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
-      
+volumes:
+  db_data:
